gui/3.9/graphstudio/keyboard-shortcuts.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)[Next](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/3.9/intro/)
  *     * [Overview](https://docs.tigergraph.com/gui/3.9/intro/)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/3.9/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/3.9/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/3.9/graphstudio/design-schema)
      * [Load Data](https://docs.tigergraph.com/gui/3.9/graphstudio/load-data)
        * [Data Transformation](https://docs.tigergraph.com/gui/3.9/graphstudio/data-transformation)
      * [Explore Graph](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/augment-visualization-result)
      * Build Graph Patterns (Deprecated)
        * [Visual Query Builder](https://docs.tigergraph.com/gui/3.9/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/3.9/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)
      * [Write openCypher Queries in TigerGraph](https://docs.tigergraph.com/gui/3.9/graphstudio/write-open-cypher-queries-in-tigergraph)
      * [Actions](https://docs.tigergraph.com/gui/3.9/graphstudio/actions)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/3.9/graphstudio/migrate-from-relational-database)
      * [Export and Import Solution](https://docs.tigergraph.com/gui/3.9/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/3.9/graphstudio/known-issues)
      * [ZoomChart Update](https://docs.tigergraph.com/gui/3.9/graphstudio/graphstudio-zoomchart-update)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/3.9/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/3.9/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/3.9/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/3.9/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/3.9/admin-portal/monitoring/README)
        * [Queries](https://docs.tigergraph.com/gui/3.9/admin-portal/monitoring/queries)
        * [Logs](https://docs.tigergraph.com/gui/3.9/admin-portal/monitoring/log-viewer)
      * [Management](https://docs.tigergraph.com/gui/3.9/admin-portal/management/README)
        * [License](https://docs.tigergraph.com/gui/3.9/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/3.9/admin-portal/management/user-management)
        * [Components](https://docs.tigergraph.com/gui/3.9/admin-portal/components/README)
          * [GPE](https://docs.tigergraph.com/gui/3.9/admin-portal/components/gpe)
          * [GSQL](https://docs.tigergraph.com/gui/3.9/admin-portal/components/gsql)
          * [Application Server (GUI)](https://docs.tigergraph.com/gui/3.9/admin-portal/components/gui)
          * [Kafka](https://docs.tigergraph.com/gui/3.9/admin-portal/components/kafka)
          * [Nginx](https://docs.tigergraph.com/gui/3.9/admin-portal/components/nginx)
          * [RESTPP](https://docs.tigergraph.com/gui/3.9/admin-portal/components/restpp)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/3.9/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.9/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/3.9/admin-portal/security/sso-aad)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/3.9/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/3.9/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/3.9/admin-portal/known-issues)
    * [Legacy Version Documentation](https://docs.tigergraph.com/gui/3.9/intro/legacy-tg-versions)


GraphStudio and Admin Portal 3.9
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 3.9](https://docs.tigergraph.com/gui/3.9/intro/)
  * GraphStudio
  * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/3.9/modules/graphstudio/pages/keyboard-shortcuts.adoc)
### Contents
  * [Application](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts#_application)
  * [Graph Canvas](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts#_graph_canvas)


# Keyboard Shortcuts
### Contents
  * [Application](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts#_application)
  * [Graph Canvas](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts#_graph_canvas)


The page lists the keyboard shortcuts for common actions in GraphStudio.
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts#_application)Application
Action | Windows | Mac  
---|---|---  
Switch focus | `Tab` | `Tab`  
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts#_graph_canvas)Graph Canvas
In order to use these shortcuts, make sure you first select the graph canvas. When the graph canvas is selected, the edges of the canvas will be highlighted with a blue box.
Action (as of October 2023) | Windows | Mac  
---|---|---  
Select vertex or edge | `Click` | `Click`  
Additive Select | `Shift`+`Click` | `Shift`+`Click`  
Area Select | `Shift`+`Click`+`Drag` | `Shift`+`Click`+`Drag`  
Show global types menu | `Ctrl`+`G` | `Cmd`+`G`  
Create a vertex | `V`+`Click` | `V`+`Click`  
Create an edge | Select source vertex, then drag from highlight halo around vertex to target vertex | Select source vertex, then drag from highlight halo around vertex to target vertex  
Delete | Hover/Click, then `Del` | Hover/Click, then `Del`  
Undo | `Ctrl`+`Z` | `Cmd`+`Z`  
Redo | `Ctrl`+`Shift`+`Z` | `Cmd`+`Shift`+`Z`  
Save | `Ctrl`+`S` | `Cmd`+`S`  
Zoom in/out | Mouse wheel | Mouse wheel  
Reset viewport | `Ctrl`+`Shift`+`R` | `Cmd`+`Shift`+`R`  
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


